# cppPythonStorage

./: CMakeLists.txt  README.md
python/: factorReader.py  factorReaderGZ.py  performanceComparison.py
src/: factorWriter.cpp  factorWriter.h  factorWriterGZ.cpp  factorWriterGZ.h  main.cpp
